renew hero section hw-03

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ img {
 .header-container{
     display: flex;
     align-items: center;
+    
 }
 .header-nav{
     display: flex;
@@ -191,6 +192,8 @@ img {
 }
 .hero-title{
     margin-bottom: 48px;
+    margin-right: auto;
+    margin-left: auto;
     max-width: 496px;
     font-weight: 700;
     font-size: 56px;
@@ -208,6 +211,8 @@ img {
     padding-bottom: 16px;
     padding-left: 32px;
     padding-right: 32px;
+    margin-right: auto;
+    margin-left: auto;
     color:var(--color-white);
     background-color: var(--color-iris);
 }
@@ -249,7 +254,6 @@ background-color: var(--color-ocean);
 }
 .team-item{
     background-color: var(--color-white);
-    padding-bottom: 32px;
 }
 .team-subtitle{
     text-align: center;
